18441
In the following code example, the compiler is completely right by telling me that `SomeClass` could not be found:
```scala
scala> class SomeClass
defined class SomeClass

scala> val xs = Seq(SomeClass)
<console>:16: error: not found: value SomeClass
       val xs = Seq(SomeClass)
                    ^
```

Unfortunately this error message could be improved. The compiler knows that there is a class with the same name, thus it can assume that the user accidentally forgotten the `new` keyword. An improved error message could look like:
```scala
scala> val xs = Seq(SomeClass)
<console>:16: error: not found: value SomeClass. Class SomeClass found instead, did you mean to create an instance of it?
       val xs = Seq(SomeClass)
                    ^
```
